Upaded colors for certain pieces

--- a/pride.html
+++ b/pride.html
@@ -139,20 +139,20 @@
                     <td>
                         5-stripe variant (earrings, necklace charm)
                         <ul>
-                            <li>white</li>
-                            <li>pink</li>
-                            <li>light-blue</li>
-                            <li>brown</li>
                             <li>black</li>
+                            <li>brown</li>
+                            <li>light-blue</li>
+                            <li>pink</li>
+                            <li>white</li>
                         </ul>
                         <br />
                         11-stripe variant (bracelet)
                         <ul>
-                            <li>white</li>
-                            <li>pink</li>
-                            <li>light-blue</li>
-                            <li>brown</li>
                             <li>black</li>
+                            <li>brown</li>
+                            <li>light-blue</li>
+                            <li>pink</li>
+                            <li>white</li>
                             <li>red</li>
                             <li>orange</li>
                             <li>yellow</li>
@@ -910,7 +910,7 @@
                     </td>
                     <td>3 stripes
                         <ul>
-                            <li>pink</li>
+                            <li>dark-pink</li>
                             <li>yellow</li>
                             <li>light-blue</li>
                         </ul>
@@ -1139,8 +1139,8 @@
                     <td>3 stripes
                         <ul>
                             <li>dark-pink</li>
-                            <li>green</li>
-                            <li>blue</li>
+                            <li>light-green</li>
+                            <li>light-blue</li>
                         </ul>
                     </td>
                     <td><img src="img/4b-polys-neck.jpg"
@@ -1181,7 +1181,7 @@
                             <li>purple</li>
                             <li>white</li>
                             <li>blue</li>
-                            <li>pink</li>
+                            <li>dark-pink</li>
                         </ul>
                     </td>
                     <td><img src="img/4b-multis-neck.jpg"
