--- a/seasons.html
+++ b/seasons.html
@@ -26,13 +26,13 @@
     <div id="projects">
         <div class="project">
             <img src="img/4b-setA-lv.JPEG" alt="LGBTQ+ Pride earrings." />
-            <p>3-stone designs inspried by the 4-seasons.</p>
+            <p>3-bead charms inspried by the 4-seasons.</p>
             <p>Coming soon.</p>
             <div class="clear"></div>
         </div>
         <div class="project">
-            <h2>Four Seasons Pendants</h2>
-            <p>3-stone pendants .</p>
+            <h2>Four Seasons Charms</h2>
+            <p>3-bead charms.</p>
             <table>
                 <tr>
                     <th>Season</th>
@@ -41,31 +41,31 @@
                     <th>Source</th>
                 </tr>
                 <tr>
-                    <th scope="row">Winter</th>
-                    <td><img src="" alt="A winter-themed color pallet; white, blue, light blue." />
-                    </td>
-                    <td>white | blue | light blue</td>
-                    <td>TBA</td>
-                </tr>
-                <tr>
                     <th scope="row">"Spring</th>
-                    <td><img src="" alt="A spring-themed color pallet; light purple, light green, pink." />
+                    <td><img src="" alt="A spring-themed color pallet; pink, light purple, light green." />
                     </td>
-                    <td>light purple | light green | pink</td>
+                    <td>pink | light-purple | light-green</td>
                     <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">Summer</th>
-                    <td><img src="" alt="A summer-themed color pallet; yellow, green, light blue." />
+                    <td><img src="" alt="A summer-themed color pallet; light blue, green, orange." />
                     </td>
-                    <td>yellow | green | light blue</td>
+                    <td>light-blue | green | orange</td>
                     <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">Fall</th>
-                    <td><img src="" alt="A fall-themed color pallet; light green, yellow, orange." />
+                    <td><img src="" alt="A fall-themed color pallet; orange, brown, red." />
                     </td>
-                    <td>light green | yellow | orange</td>
+                    <td>orange | brown | red</td>
+                    <td>TBA</td>
+                </tr>
+                <tr>
+                    <th scope="row">Winter</th>
+                    <td><img src="" alt="A winter-themed color pallet; white, light blue, blue." />
+                    </td>
+                    <td>white | light-blue | blue</td>
                     <td>TBA</td>
                 </tr>
             </table>
@@ -75,7 +75,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 25 May 2025.</li>
+                <li>Last updated 28 May 2025.</li>
             </ul>
         </nav>
     </footer>
