Androsexual file on wiki moved; replaced with new image

--- a/pride.html
+++ b/pride.html
@@ -1393,13 +1393,13 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/e/e3/AndrosexualFlag.png"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/2/22/Androsexual_Flag.svg/"
                             alt="The androsexual pride flag; from top to bottom: light-blue, brown, purple." />
                         Androsexual
                         <br />
                         (man/masc attraction)
                         <br />
-                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:AndrosexualFlag.png" target="_blank"
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Androsexual_Flag.svg" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
                     <td>5 stripes
@@ -1438,7 +1438,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 15 August 2025.</li>
+                <li>Last updated 18 October 2025.</li>
             </ul>
         </nav>
     </footer>
