Updated current and future listings in anime and nature sections

--- a/fanwork.html
+++ b/fanwork.html
@@ -27,25 +27,27 @@
         <div class="project">
             <img src="img/Tart-set.jpg"
                 alt="Pyrrhic Silva Craft's rendition of Tartaglia's signature earrings from the game Genshin Impact." />
-            <p>3-stone designs inspried by the 4-seasons.</p>
-            <p>Coming soon.</p>
+            <p>Handmade jewelry inspired by anime and video games.</p>
+            <p>Feel free to send me a message on <a href="https://pyrrhicsilvacrafts.etsy.com" target="_blank"
+                    rel="noopener noreferrer">Etsy</a> about any items you're interested in that are currently sold out
+                or unavailable.</p>
             <div class="clear"></div>
         </div>
         <div class="project">
-            <h2>Four Seasons Pendants</h2>
-            <p>3-stone pendants .</p>
+            <h2>Anime and Video Game Earrings</h2>
             <table>
                 <tr>
                     <th>Listing</th>
-                    <th>Description</th>
                     <th>Sample Jewelry</th>
+                    <th>Description</th>
                     <th>Fandom</th>
                 </tr>
                 <tr>
                     <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/4298006921/childe-tartaglia-earring-genshin-impact"
-                            target="_blank" rel="noopener noreferrer">Child Tartaglia Earrings</a></td>
+                            target="_blank" rel="noopener noreferrer">Childe Tartaglia Earrings</a></td>
                     <td><img src="img/Tart-1.jpg"
                             alt="Pyrrhic Silva Craft's rendition of Tartaglia's signature earrings from the game Genshin Impact." />
+                        <br />
                     </td>
                     <td>Earrings inspired by our favorite boy Childe "Ajax" Tartaglia. Comes as just one earring or as a
                         pair.</td>
@@ -56,27 +58,46 @@
                             target="_blank" rel="noopener noreferrer">Howl's earrings</a></td>
                     <td><img src="img/Howls-lv.jpg"
                             alt="Pyrrhic Silva Craft's rendition of Howl's earrings from the movie Howl's Moving Castle." />
+                        <br />
                     </td>
-                    <td>Green and red glass drop earrings inspired by Howl's earrings. Available in lever back, fish hook, and ball-post stud ear findings.</td>
+                    <td>Green and red glass drop earrings inspired by Howl's earrings. Available in lever back, fish
+                        hook, and ball-post stud ear findings.</td>
                     <td>Howl's Moving Castle</td>
                 </tr>
                 <tr>
-                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/4313226580/twin-star-earrings-minimalist-earrings"
-                            target="_blank" rel="noopener noreferrer">Twin-Star earrings</a></td>
-                    <td><img src="img/10-13-star-bp.jpg"
-                            alt="A pair of earrings with two five-pointed stars attached to each ball post stud. One star is larger and hollow, while the other is smaller and solid metal. The smaller star hangs lower the larger one by a thin chain." />
+                    <td>Soma Kyo Earrings
+                        <br />
+                        (Coming soon)
                     </td>
-                    <td>Double star earrings, designed with the ball-post studs in mind but also available with lever
-                        back or fish hook ear findings.</td>
-                    <td>Original design</td>
+                    <td><img src="img/furuba-red-lv.jpg"
+                            alt="A pair of earrings with red and white beads alternating, followed by a stainless steel cat charm." />
+                        <br />
+                    </td>
+                    <td>A pair of red and white earrings with a stainless steel cat charm, inspired by Kyo's curse
+                        bracelet. Also comes as 2001 anime black and white, with your choice of lever back or fish hook
+                        closures.</td>
+                    <td>Original design (inspired by Fruits Basket)</td>
+                </tr>
+                <tr>
+                    <td>Traveler Aether's Earrings in Steel-Tone</td>
+                    <td>Coming soon</td>
+                    <!-- <td><img src=""
+                            alt="A pair of earrings with two four-pointed stars attached to each ball post stud. One star is larger than the other, with the smaller star hanging lower by a thin chain." />
+                        <br />
+                    </td> -->
+                    <td>Male Traveler Aether's signature earring in steel-toned stainless steel and glass. Available in
+                        every element plus Abyss twin white and unaligned black. Message me about availablity of
+                        non-canon colors (like pink).</td>
+                    <td>Genshin Impact</td>
                 </tr>
                 <tr>
                     <td>Twin Travelers Shooting Stars Earrings</td>
                     <td>Coming soon</td>
                     <!-- <td><img src=""
                             alt="A pair of earrings with two four-pointed stars attached to each ball post stud. One star is larger than the other, with the smaller star hanging lower by a thin chain." />
+                        <br />
                     </td> -->
-                    <td>A pair of shooting star earrings loosly inspired by the Twin <s>Descenders</s>Travelers from
+                    <td>A pair of shooting star earrings loosly inspired by the Twin <s>Descenders</s> Travelers from
                         Genshin Impact.</td>
                     <td>Original design (inspired by Genshin Impact)</td>
                 </tr>
@@ -87,7 +108,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 04 July 2025.</li>
+                <li>Last updated 03 November 2025.</li>
             </ul>
         </nav>
     </footer>
