--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="project">
             <img src="img/Tart-set.jpg" alt="Genshin Impact Childe Tartaglia Earrings." />
             <h2>Anime and Vidoe Game Jewelry</h2>
-            <p>Various anime and vidoe-game inspired jewelry pieces.</p>
+            <p>Various anime and video-game inspired jewelry pieces.</p>
             <p><a href="fanwork.html">Anime/Video Games</a></p>
             <div class="clear"></div>
         </div>
@@ -55,7 +55,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 24 June 2025.</li>
+                <li>Last updated 03 November 2025.</li>
             </ul>
         </nav>
     </footer>
