--- a/seasons.html
+++ b/seasons.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Four Seasons | Pyrrhic Silva Crafts</h1>
+        <h1>Nature | Pyrrhic Silva Crafts</h1>
         <nav>
             <ul>
                 <li>&nbsp;</li>
@@ -26,47 +26,65 @@
     <div id="projects">
         <div class="project">
             <img src="img/4b-setA-lv.JPEG" alt="LGBTQ+ Pride earrings." />
-            <p>3-bead charms inspried by the 4-seasons.</p>
-            <p>Coming soon.</p>
+            <p>Handmade earrings that feature nature and the great outdoors.</p>
+            <p>Feel free to send me a message on <a href="https://pyrrhicsilvacrafts.etsy.com" target="_blank"
+                    rel="noopener noreferrer">Etsy</a> about any items you're interested in that are currently sold out
+                or unavailable.</p>
             <div class="clear"></div>
         </div>
         <div class="project">
+            <h2>Nature and Outdoors</h2>
+            <table>
+                <tr>
+                    <th>Listing</th>
+                    <th>Sample Jewelry</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/4313226580/twin-star-earrings-minimalist-earrings"
+                            target="_blank" rel="noopener noreferrer">Twin-Star earrings</a></td>
+                    <td><img src="img/10-13-star-bp.jpg"
+                            alt="A pair of earrings with two five-pointed stars attached to each ball post stud. One star is larger and hollow, while the other is smaller and solid metal. The smaller star hangs lower the larger one by a thin chain." />
+                    </td>
+                    <td>Double star earrings, designed with the ball-post studs in mind but also available with lever
+                        back or fish hook ear findings.</td>
+                </tr>
+            </table>
+        </div>
+        <div class="project">
             <h2>Four Seasons Charms</h2>
-            <p>3-bead charms.</p>
+            <p>3-bead charms inspried by the 4-seasons. <a
+                    href="https://pyrrhicsilvacrafts.etsy.com/listing/4337226564/four-seasons-glass-and-stainless-steel"
+                    target="_blank" rel="noopener noreferrer">Available now!</a></p>
             <table>
                 <tr>
                     <th>Season</th>
                     <th>Swatch</th>
                     <th>Colors</th>
-                    <th>Source</th>
                 </tr>
                 <tr>
-                    <th scope="row">"Spring</th>
+                    <th scope="row">Spring</th>
                     <td><img src="" alt="A spring-themed color pallet; pink, light purple, light green." />
                     </td>
                     <td>pink | light-purple | light-green</td>
-                    <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">Summer</th>
                     <td><img src="" alt="A summer-themed color pallet; light blue, green, orange." />
                     </td>
                     <td>light-blue | green | orange</td>
-                    <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">Fall</th>
                     <td><img src="" alt="A fall-themed color pallet; orange, brown, red." />
                     </td>
                     <td>orange | brown | red</td>
-                    <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">Winter</th>
                     <td><img src="" alt="A winter-themed color pallet; white, light blue, blue." />
                     </td>
                     <td>white | light-blue | blue</td>
-                    <td>TBA</td>
                 </tr>
             </table>
         </div>
