New seasons themed earrings

--- a/index.html
+++ b/index.html
@@ -32,22 +32,21 @@
             <img src="img/4b-setA-lv.JPEG" alt="LGBTQ+ Pride earrings." />
             <h2>Pride Jewelry</h2>
             <p>A running list of the pride flags that my shop offers jewelry for.</p>
-            <p><a href="pride.html">Pride</a></p>
+            <p><a href="pride.html">Pride Selection</a></p>
             <div class="clear"></div>
         </div>
         <div class="project">
             <img src="img/Tart-set.jpg" alt="Genshin Impact Childe Tartaglia Earrings." />
             <h2>Anime and Vidoe Game Jewelry</h2>
             <p>Various anime and video-game inspired jewelry pieces.</p>
-            <p><a href="fanwork.html">Anime/Video Games</a></p>
+            <p><a href="fanwork.html">Anime/Video Games Selection</a></p>
             <div class="clear"></div>
         </div>
         <div class="project">
-            <img src="img/Spaceman.png" alt="Winter swatch." />
-            <h2>Four Seasons</h2>
-            <p>3-color palets for each season.</p>
-            <p>Coming soon.</p>
-            <p><a href="seasons.html">Seasons Swatches</a></p>
+            <img src="img/Seasons-set.jpg" alt="Drop earrings inspired by the four seasons." />
+            <h2>Nature Themed Jewelry</h2>
+            <p>Jewelry pieces themed around nature and the great outdoors.</p>
+            <p><a href="seasons.html">Nature Selection</a></p>
             <div class="clear"></div>
         </div>
     </div>
