--- a/seasons.html
+++ b/seasons.html
@@ -42,9 +42,11 @@
                 </tr>
                 <tr>
                     <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/4313226580/twin-star-earrings-minimalist-earrings"
-                            target="_blank" rel="noopener noreferrer">Twin-Star earrings</a></td>
+                            target="_blank" rel="noopener noreferrer">Twin-Star earrings</a>
+                    </td>
                     <td><img src="img/10-13-star-bp.jpg"
                             alt="A pair of earrings with two five-pointed stars attached to each ball post stud. One star is larger and hollow, while the other is smaller and solid metal. The smaller star hangs lower the larger one by a thin chain." />
+                        <br />
                     </td>
                     <td>Double star earrings, designed with the ball-post studs in mind but also available with lever
                         back or fish hook ear findings.</td>
@@ -64,25 +66,32 @@
                 </tr>
                 <tr>
                     <th scope="row">Spring</th>
-                    <td><img src="" alt="A spring-themed color pallet; pink, light purple, light green." />
+                    <td><img src="img/Seasons-spring-lv.jpg"
+                            alt="A spring-themed color pallet; pink, light purple, light green." />
+                        <br />
                     </td>
                     <td>pink | light-purple | light-green</td>
                 </tr>
                 <tr>
                     <th scope="row">Summer</th>
-                    <td><img src="" alt="A summer-themed color pallet; light blue, green, orange." />
+                    <td><img src="img/Seasons-summer-lv.jpg"
+                            alt="A summer-themed color pallet; light blue, green, orange." />
+                        <br />
                     </td>
                     <td>light-blue | green | orange</td>
                 </tr>
                 <tr>
                     <th scope="row">Fall</th>
-                    <td><img src="" alt="A fall-themed color pallet; orange, brown, red." />
+                    <td><img src="img/Seasons-fall-lv.jpg" alt="A fall-themed color pallet; orange, brown, red." />
+                        <br />
                     </td>
                     <td>orange | brown | red</td>
                 </tr>
                 <tr>
                     <th scope="row">Winter</th>
-                    <td><img src="" alt="A winter-themed color pallet; white, light blue, blue." />
+                    <td><img src="img/Seasons-winter-lv.jpg"
+                            alt="A winter-themed color pallet; white, light blue, blue." />
+                        <br />
                     </td>
                     <td>white | light-blue | blue</td>
                 </tr>
@@ -93,7 +102,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 28 May 2025.</li>
+                <li>Last updated 03 November 2025.</li>
             </ul>
         </nav>
     </footer>
